Fix bug message loading